# basic_game

./: .gitignore  README.rst  pyproject.toml
basic_game/: __init__.py  __main__.py  action.py  dispatch.py  enums.py  present.py  reducer.py  state.py
tests/: test_basic_game.py
